# ac-trace

./: .gitignore  README.md  acceptance_criteria.yaml  pyproject.toml  setup.py  test_result_report.html  traceability-report.html  traceability-report.md  traceability.generated.yaml  traceability.yaml
.github/workflows/: tests.yml
ac_trace/: __init__.py  __main__.py  annotations.py  catalog.py  cli.py  inference.py  manifest.py  mutator.py  python_ast.py  reporting.py  test_runner.py  validator.py
ac_trace.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
demo/: __init__.py  ac1-report.yaml  test_result_report.html  traceability.generated.yaml
demo/demo_api/: app.py
demo/tests/: test_api.py  test_pricing.py
demo_api/: app.py
demo_api/services/: pricing.py
tests/: test_api.py  test_cli.py  test_inference.py  test_mutator.py  test_pricing.py  test_reporting.py  test_test_runner.py  test_validator.py
